Fixed clear button visibility of input field (Edge browser).

--- a/src/my-date-picker/my-date-picker.component.css
+++ b/src/my-date-picker/my-date-picker.component.css
@@ -49,6 +49,10 @@
     text-align: center;
 }
 
+.mydp ::-ms-clear {
+    display: none;
+}
+
 .mydp .selbtngroup {
     position: relative;
     vertical-align: middle;
